--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Форум (капитан Данила Азметов)",
   "main": "app.js",
   "dependencies": {
+    "better-sqlite3": "^7.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
     "moment": "^2.27.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
