--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Kuzovchikov",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^7.1.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "sqlite3": "^5.0.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
