--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "better-sqlite3": "^7.1.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
     "moment": "^2.27.0",
@@ -14,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "srart": "nodemon app.js"
   },
   "repository": {
     "type": "git",
