--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Kuzovchikov",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^7.1.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
