--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "serve": "nodemon app.js"
   },
   "repository": {
     "type": "git",
