--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 
 
 *.db
-.DS_Store
 ### Node ###
 # Logs
 logs
@@ -17,8 +16,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Runtime data
-pids
+# Runtime datapids
 *.pid
 *.seed
 *.pid.lock
@@ -211,3 +209,4 @@ fabric.properties
 .idea/$CACHE_FILE$
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,node
+.DS_Store
