--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Runtime datapids
+# Runtime data
 pids
 *.pid
 *.seed
