--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "better-sqlite3": "^7.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
+    "handlebars-helpers": "^0.10.0",
     "moment": "^2.27.0",
     "nodemon": "^2.0.4",
     "sqlite3": "^5.0.0"
